fixed the broken navbar activity on mobile still need to fix the scrolling issue but it is usable at the moment

--- a/client/src/components/CustomNavbar/CustomNavbar.scss
+++ b/client/src/components/CustomNavbar/CustomNavbar.scss
@@ -56,7 +56,7 @@ img {
         margin: 5px;
     }
     .navbar-container{
-        position: relative;
+        position: fixed;
     }
     .hamburger{
         position: absolute;
@@ -97,7 +97,7 @@ img {
         -webkit-clip-path: circle(5000px at 90% -20%);
         html, body {
             max-height: 100vh;
-            overflow-y: hidden;
+            overflow: hidden;
         }
     }
     
